Add DBUnit to classpath

--- a/ReasonableCare/.classpath
+++ b/ReasonableCare/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="jars/ojdbc7.jar"/>
 	<classpathentry kind="lib" path="jars/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="jars/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="jars/dbunit-2.4.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
