--- a/ReasonableCareTest/.classpath
+++ b/ReasonableCareTest/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ReasonableCare"/>
 	<classpathentry kind="lib" path="jars/dbunit-2.4.9.jar"/>
-	<classpathentry kind="lib" path="jars/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="jars/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="jars/hamcrest-all-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
