--- a/ReasonableCareTest/pom.xml
+++ b/ReasonableCareTest/pom.xml
@@ -30,5 +30,10 @@
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
 	</dependencies>
 </project>
