--- a/ReasonableCareTest/pom.xml
+++ b/ReasonableCareTest/pom.xml
@@ -45,5 +45,10 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+		</dependency>
 	</dependencies>
 </project>
